CNCF/OrchestrationManagement/SchedulingOrchestration/Kubernetes/resource-manifest/ingress/gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-server
  namespace: cicd
spec:
  ingressClassName: nginx
  rules:
  - host: gitlab.yakir.top
    http:
      paths:
      - backend:
          service:
            name: gitlab-webservice-default
            port:
              number: 8181
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.1.1
