CNCF/OrchestrationManagement/SchedulingOrchestration/Kubernetes/resource-manifest/ingress/spinnaker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spinnaker-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: spinnaker.yakir.top
    http:
      paths:
      - backend:
          service:
            name: spinnaker-server
            port:
              number: 8080
        path: /
        pathType: Prefix
